# self-built-search

./: README.md  pyproject.toml
.specify/memory/: constitution.md
docs/: architecture.md
src/searchstack/: __init__.py  __main__.py  cli.py  models.py  services.py  utils.py
src/searchstack/adapters/: __init__.py  base.py  duckduckgo.py  fetch.py  wikipedia.py
tests/: test_cli.py
