[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "searchstack"
version = "0.1.0"
description = "Local-first web discovery CLI MVP"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "OpenClaw" }
]
dependencies = []

[project.scripts]
searchstack = "searchstack.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
